--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.0",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2"
